--- a/apps/login/styles/globals.css
+++ b/apps/login/styles/globals.css
@@ -6,6 +6,16 @@ body {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --accent: #3384f3;
+}
+
+code {
+  color: var(--accent);
+}
+
+code::after,
+code::before {
+  content: '`';
 }
 
 a {
@@ -13,6 +23,8 @@ a {
   text-decoration: none;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
