--- a/apps/main/styles/globals.css
+++ b/apps/main/styles/globals.css
@@ -11,6 +11,15 @@ body {
   --accent: #9984f3;
 }
 
+code {
+  color: var(--accent);
+}
+
+code::after,
+code::before {
+  content: '`';
+}
+
 a {
   color: inherit;
   text-decoration: none;
